// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamic-info-patterns-form Renders \`dynamic-info-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object]"
  alarm-excluded-attributes="v.last_update_date,v.last_event_date"
  entity-excluded-items="last_event_date"
  isentitytype="true"
  some-required="some-required"
  value="[object Object]"
  with-alarm="with-alarm"
  with-entity="with-entity"
/>
`;

exports[`dynamic-info-patterns-form Renders \`dynamic-info-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object]"
  alarm-excluded-attributes="v.last_update_date,v.last_event_date"
  entity-excluded-items="last_event_date"
  some-required="some-required"
  value="[object Object]"
  with-alarm="with-alarm"
  with-entity="with-entity"
/>
`;
